--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
   "dependencies": {
     "@js-joda/core": "^5.5.3",
-    "fp-ts": "^2.16.0",
-    "gts": "^3.1.1",
-    "immutable": "^4.3.0",
-    "jest": "^29.6.1"
+    "fp-ts": "^2.16.1",
+    "gts": "^5.0.1",
+    "immutable": "^5.0.0-beta.1",
+    "jest": "^29.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.8",
-    "@babel/preset-env": "^7.22.7",
-    "@babel/preset-typescript": "^7.22.5",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^14.11.2",
-    "babel-jest": "^29.6.1",
-    "gts": "^3.1.1",
-    "typescript": "~4.7.0"
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-typescript": "^7.22.11",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.6",
+    "babel-jest": "^29.6.4",
+    "gts": "^5.0.1",
+    "typescript": "~5.2.2"
   },
-  "scripts": {
+  "scripts":{
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
-    "test": "jest",
-    "prepare": "npm.cmd run compile",
-    "pretest": "npm.cmd run compile",
-    "posttest": "npm.cmd run lint"
+    "test": "yarn jest",
+    "watch": "yarn jest --watch",
+    "prepare": "yarn compile",
+    "pretest": "yarn compile",
+    "posttest": "yarn lint"
   }
 }
