--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "fp-ts": "^2.16.1",
     "gts": "^5.0.1",
     "immutable": "^5.0.0-beta.1",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "express": "4.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
@@ -13,7 +14,6 @@
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.6",
     "babel-jest": "^29.6.4",
-    "gts": "^5.0.1",
     "typescript": "~5.2.2"
   },
   "scripts":{
@@ -25,6 +25,7 @@
     "watch": "yarn jest --watch",
     "prepare": "yarn compile",
     "pretest": "yarn compile",
-    "posttest": "yarn lint"
+    "posttest": "yarn lint",
+    "start": "node ./build/src/app.js"
   }
 }
