--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
     "@js-joda/core": "^5.5.3",
+    "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.21",
+    "express": "4.18.2",
     "fp-ts": "^2.16.1",
     "gts": "^5.0.1",
     "immutable": "^5.0.0-beta.1",
-    "jest": "^29.6.4",
-    "express": "4.18.2"
+    "jest": "^29.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
@@ -16,7 +20,7 @@
     "babel-jest": "^29.6.4",
     "typescript": "~5.2.2"
   },
-  "scripts":{
+  "scripts": {
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
