--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "fp-ts": "^2.16.1",
     "gts": "^5.0.1",
     "immutable": "^5.0.0-beta.1",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
@@ -30,6 +31,7 @@
     "prepare": "yarn compile",
     "pretest": "yarn compile",
     "posttest": "yarn lint",
-    "start": "node ./build/src/app.js"
+    "start": "node ./build/src/app.js",
+    "launch": "tsc ; bun start"
   }
 }
