--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,21 @@
 {
-  "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
+    "target": "esnext",
+    "module": "commonjs",
+    "skipLibCheck": true,
     "rootDir": ".",
     "outDir": "build",
-    "paths": {
-      "@application/*": ["./src/application/*"],
-      "@domain/*": ["./src/domain/*"],
-      "@infrastructure/*": ["./src/infrastructure/*"],
-      "@shared/*": ["./src/~shared/*"],
-      "@test/*": ["./test/*"]
-    },
+    "baseUrl": "./",
+//    "paths": {
+//      "@application/*": ["src/application/*"],
+//      "@domain/*": ["src/domain/*"],
+//      "@infrastructure/*": ["src/infrastructure/*"],
+//      "@shared/*": ["src/~shared/*"],
+//      "@test/*": ["test/*"]
+//    },
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "Node"
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["./src/**/*.ts", "test/**/*.ts"]
 }
