--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "express": "4.18.2",
     "fp-ts": "^2.16.1",
     "gts": "^5.0.1",
