--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "4.18.2",
+    "fast-csv": "^4.3.6",
     "fp-ts": "^2.16.1",
     "gts": "^5.0.1",
     "immutable": "^5.0.0-beta.1",
