:bug: Add back extra hours in total worked hours computation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "esModuleInterop": true,
     "moduleResolution": "Node"
   },
-  "include": ["./src/**/*.ts", "test/**/*.ts"]
+  "include": ["./src/**/*.ts"]
 }
