🔧 update package and prettier some files

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pretest": "yarn compile",
     "posttest": "yarn lint",
     "start": "node ./build/src/app.js",
-    "launch": "tsc ; bun start"
+    "launch": "tsc ; bun start",
+    "generate-csv": "tsc ; bun run src/generate-csv.ts"
   }
 }
