--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "posttest": "yarn lint",
     "start": "node ./build/src/app.js",
     "launch": "tsc ; bun start",
-    "generate-csv": "tsc ; bun run src/generate-csv-payroll.ts > ./log.txt",
-    "generate-csv-d": "tsc ; bun run -d src/generate-csv-payroll.ts > ./log.txt"
+    "generate-csv": "tsc ; bun run src/generate-csv-payroll.ts > logs/log.txt",
+    "generate-csv-d": "tsc ; bun run -d src/generate-csv-payroll.ts > logs/log.txt"
   }
 }
