--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "archiver": "^7.0.1",
+    "aws-sdk": "^2.1649.0",
     "cors": "^2.8.5",
     "express": "4.18.2",
     "fast-csv": "^4.3.6",
