--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "archiver": "^7.0.1",
     "aws-sdk": "^2.1649.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "4.18.2",
     "fast-csv": "^4.3.6",
     "fp-ts": "^2.16.1",
