--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "posttest": "yarn lint",
     "start": "node ./build/src/app.js",
     "launch": "tsc ; bun start",
-    "generate-csv": "tsc ; bun run src/generate-csv-payroll.ts > logs/log.txt",
+    "generate-csv": "tsc ; bun run src/generate-csv-payroll.ts --debug",
     "generate-csv-d": "tsc ; bun run src/generate-csv-payroll.ts --debug > logs/log.txt"
   }
 }
