--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@types/express": "^4.17.21",
     "archiver": "^7.0.1",
     "aws-sdk": "^2.1649.0",
+    "chalk": "^5.4.1",
+    "cli-table3": "^0.6.5",
+    "commander": "^14.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "4.18.2",
@@ -39,9 +42,10 @@
     "pretest": "yarn compile",
     "posttest": "yarn lint",
     "start": "node ./build/src/app.js",
-    "launch": "tsc ; bun start",
+    "launch": "tsc ; bun start -d",
     "generate-csv": "tsc ; bun run src/generate-csv-payroll.ts --debug",
     "generate-csv-d": "tsc ; bun run src/generate-csv-payroll.ts --debug > logs/log.txt",
-    "generate-premium": "tsc ; bun run src/scripts/generate-premium-details.ts"
+    "generate-premium": "tsc ; bun run src/scripts/generate-premium-details.ts",
+    "compare-csv": "tsc ; bun run src/scripts/compare-csv-files.ts"
   }
 }
