--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "generate-csv": "tsc ; bun run src/generate-csv-payroll.ts --debug",
     "generate-csv-d": "tsc ; bun run src/generate-csv-payroll.ts --debug > logs/log.txt",
     "generate-premium": "tsc ; bun run src/scripts/generate-premium-details.ts",
-    "compare-csv": "tsc ; bun run src/scripts/compare-csv-files.ts"
+    "compare-csv": "tsc ; bun run src/scripts/compare-csv-files.ts",
+    "compare-months": "tsc ; bun run src/scripts/compare-csv-month.ts",
+    "compare-year": "tsc ; bun run src/scripts/compare-csv-year.ts"
   }
 }
