--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gts": "^5.0.1",
     "immutable": "^5.0.0-beta.1",
     "jest": "^29.6.4",
+    "winston": "^3.18.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -41,7 +42,7 @@
     "prepare": "yarn compile",
     "pretest": "yarn compile",
     "posttest": "yarn lint",
-    "start": "node ./build/src/app.js",
+    "start": "node ./build/src/main.js",
     "launch": "tsc ; bun start -d",
     "generate-csv": "tsc ; bun run src/scripts/run-generate-csv.ts --debug",
     "generate-csv-d": "tsc ; bun run src/scripts/run-generate-csv.ts --debug > logs/log.txt",
