--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gts": "^5.0.1",
     "immutable": "^5.0.0-beta.1",
     "jest": "^29.6.4",
+    "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "zod": "^3.22.4"
   },
