--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/node-cron": "^3.0.11",
     "archiver": "^7.0.1",
     "aws-sdk": "^2.1649.0",
     "chalk": "^5.4.1",
@@ -20,6 +21,7 @@
     "gts": "^5.0.1",
     "immutable": "^5.0.0-beta.1",
     "jest": "^29.6.4",
+    "node-cron": "^4.2.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "zod": "^3.22.4"
