➕ Add `ts-node` and `tsconfig-paths` dependencies ♻️ Update `start` script and introduce `build` and `dev` commands ♻️ Optimize `compile` script to include memory configuration

--- a/package.json
+++ b/package.json
@@ -33,19 +33,23 @@
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.6",
     "babel-jest": "^29.6.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "~5.2.2"
   },
   "scripts": {
     "lint": "gts lint",
     "clean": "gts clean",
-    "compile": "tsc",
+    "compile": "node --max-old-space-size=2048 ./node_modules/.bin/tsc -p tsconfig.build.json",
+    "build": "yarn clean && yarn compile",
+    "dev": "node --max-old-space-size=2048 ./node_modules/.bin/tsc -p tsconfig.dev.json --watch",
+    "start": "node ./build/src/main.js",
     "fix": "gts fix",
     "test": "yarn jest",
     "watch": "yarn jest --watch",
     "prepare": "yarn compile",
     "pretest": "yarn compile",
     "posttest": "yarn lint",
-    "start": "bun run compile && node ./build/src/main.js",
     "launch": "tsc ; bun start -d",
     "generate-csv": "tsc ; bun run src/scripts/run-generate-csv.ts --debug",
     "generate-csv-d": "tsc ; bun run src/scripts/run-generate-csv.ts --debug > logs/log.txt",
